did mass changes, now tests fail (WIP)
