# apartments-api/src/server/controllers/documentController.js
@@ -1,25 +1,25 @@
 'use strict';
 const documentService = require('../../services/documentService');
 
-function * get() {
-  if (this.request.query.listing_id) {
-    const listing_id = parseInt(this.request.query.listing_id);
-    this.response.body = yield documentService.getByListingId(listing_id, this.request.user);
+async function get(ctx) {
+  if (ctx.request.query.listing_id) {
+    const listing_id = parseInt(ctx.request.query.listing_id);
+    ctx.response.body = await documentService.getByListingId(listing_id, ctx.request.user);
   } else {
-    this.response.body = yield documentService.getByUser(this.request.user);
+    ctx.response.body = await documentService.getByUser(ctx.request.user);
   }
-  this.response.status = 200;
+  ctx.response.status = 200;
 }
 
-function * destroy() {
-  const document_id = parseInt(this.params.document_id);
-  yield documentService.destroy(document_id, this.request.user);
-  this.response.status = 204;
+async function destroy(ctx) {
+  const document_id = parseInt(ctx.params.document_id);
+  await documentService.destroy(document_id, ctx.request.user);
+  ctx.response.status = 204;
 }
 
-function * post() {
-  this.response.body = yield documentService.create(this.request.body, this.request.user);
-  this.response.status = 201;
+async function post(ctx) {
+  ctx.response.body = await documentService.create(ctx.request.body, ctx.request.user);
+  ctx.response.status = 201;
 }
 
 module.exports = {
